--- a/Devoir 1/rapport.html
+++ b/Devoir 1/rapport.html
@@ -97,13 +97,13 @@
                     Diagramme de classe conceptuel (20%)
                 </td>
                 <td>
-                    Classes, associations, attributs (50%)
+                    Logique
                 </td>
                 <td>
-                    Méthodes, contraintes (50%)
+                    Logique
                 </td>
                 <td>
-                    Logique (70%)
+                    Classes, associations, attributs 
                 </td>
             </tr>
             <tr>
@@ -111,13 +111,13 @@
                     Diagrammes de séquences système (10%)
                 </td>
                 <td>
-                    GUI (30%)
+                    Vérifier les vols/lignes/itinéraires
                 </td>
                 <td>
-                    Logique (70%)
+                    Réserver un siège
                 </td>
                 <td>
-                    Logique (70%)
+                    Payer un siège
                 </td>
             </tr>
             <tr>
@@ -125,13 +125,13 @@
                     Diagramme de classe (25%)
                 </td>
                 <td>
-                    GUI (30%)
+                    Méthodes, contraintes
                 </td>
                 <td>
-                    Logique (70%)
+                    Logique
                 </td>
                 <td>
-                    Logique (70%)
+                    Classes, associations, attributs 
                 </td>
             </tr>
             <tr>
@@ -153,13 +153,13 @@
                     Diagramme de paquets (15%)
                 </td>
                 <td>
-                    GUI (30%)
+                    IDK
                 </td>
                 <td>
-                    Logique (70%)
+                    IDK
                 </td>
                 <td>
-                    Logique (70%)
+                    IDK
                 </td>
             </tr>
             <tr>
@@ -167,13 +167,13 @@
                     Contraintes OCL (15%)
                 </td>
                 <td>
-                    GUI (30%)
+                    IDK
                 </td>
                 <td>
-                    Logique (70%)
+                    IDK
                 </td>
                 <td>
-                    Logique (70%)
+                    IDK
                 </td>
             </tr>
         </tbody>
