separation taches + temps mis

--- a/Devoir 1/rapport.html
+++ b/Devoir 1/rapport.html
@@ -49,7 +49,7 @@
         <br>
         <span style="font-weight: bold;">Courriel: </span>simon.voglimacci.stephanopoli@umontreal.ca
         <br>
-        <span style="font-weight: bold;">temps mis: </span>40 heures
+        <span style="font-weight: bold;">temps mis: </span>15 heures
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Julie Yang
@@ -58,7 +58,7 @@
         <br>
         <span style="font-weight: bold;">Courriel: </span>julie.yang@umontreal.ca
         <br>
-        <span style="font-weight: bold;">temps mis: </span>40 heures
+        <span style="font-weight: bold;">temps mis: </span>15 heures
     </p>
     <p>
         <span style="font-weight: bold;">Nom: </span>Célina Zhang
@@ -67,7 +67,7 @@
         <br>
         <span style="font-weight: bold;">Courriel: </span>celina.zhang@umontreal.ca
         <br>
-        <span style="font-weight: bold;">temps mis: </span>40 heures
+        <span style="font-weight: bold;">temps mis: </span>15 heures
     </p>
     <h2>
         Distribution des tâches</h2>
@@ -94,7 +94,7 @@
         <tbody>
             <tr>
                 <td class="first_col">
-                    Diagramme de classe conceptuel (20%)
+                    Diagramme de classe conceptuel 
                 </td>
                 <td>
                     Logique
@@ -108,7 +108,7 @@
             </tr>
             <tr>
                 <td class="first_col">
-                    Diagrammes de séquences système (10%)
+                    Diagrammes de séquences système 
                 </td>
                 <td>
                     Vérifier les vols/lignes/itinéraires
@@ -122,7 +122,7 @@
             </tr>
             <tr>
                 <td class="first_col">
-                    Diagramme de classe (25%)
+                    Diagramme de classe 
                 </td>
                 <td>
                     Méthodes, contraintes
@@ -136,7 +136,7 @@
             </tr>
             <tr>
                 <td class="first_col">
-                    Diagrammes de séquence/collaboration (15%)
+                    Diagrammes de séquence/collaboration
                 </td>
                 <td>
                     Vérifier les vols/lignes/itinéraires
@@ -150,30 +150,30 @@
             </tr>
             <tr>
                 <td class="first_col">
-                    Diagramme de paquets (15%)
+                    Diagramme de paquets 
                 </td>
                 <td>
-                    IDK
+                    Conception
                 </td>
                 <td>
-                    IDK
+                    Logique
                 </td>
                 <td>
-                    IDK
+                    Logique
                 </td>
             </tr>
             <tr>
                 <td class="first_col">
-                    Contraintes OCL (15%)
+                    Contraintes OCL 
                 </td>
                 <td>
-                    IDK
+                    3 contraintes
                 </td>
                 <td>
-                    IDK
+                    4 contraintes
                 </td>
                 <td>
-                    IDK
+                    3 contraintes
                 </td>
             </tr>
         </tbody>
