--- a/Devoir 1/rapport.html
+++ b/Devoir 1/rapport.html
@@ -39,7 +39,7 @@
     </style><meta name="shimejiBrowserExtensionId" content="gohjpllcolmccldfdggmamodembldgpc" data-version="2.0.5"></head>
 <body>
     <h1 style="text-align: center;">
-        IFT 3911 - Devoir 1</h1>
+        IFT 3911 - Devoir 1 (équipe echo)</h1>
     <h2>
         Information générale</h2>
     <p>
@@ -178,25 +178,35 @@
             </tr>
         </tbody>
     </table>
-    <h2>
-        Hypothèses</h2>
+    <h2>Diagramme de classe conceptuel</h2>
     <p>
-        J'ai supposé que...
-    </p>
-    <h2>
-        Tâche 1</h2>
-    <p>
-        Voici ma solution pour la tâche 1.
+        Voici quelques hypothèses et notre raisonnement derrière notre diagramme de classe conceptuel :
     </p>
     <ul>
-        <li>Voici un <a href="file1.txt">lien</a> vers les fichiers.</li>
-        <li>Images affichées directement.</li>
+        <li>Nous avons décidé de généraliser quelques classes comme Company, Itinerary et TransportHub afin de faciliter la réutilisabilité.</li>
+        <li>Nous avons décidé de ne pas généraliser les classes Econ et First car nous avons jugé qu'il y a trop de différences entre PlaneSection et TrainSection.</li>
+        <li>Nous avons décidé d'utiliser une classe d'association pour lier Reservation a Clien afin de ne pas avoir de cycle dans notre diagramme.</li>
+        <li>Nous avons décidé de mettre deux associations pour lier Flight a Aiport et trois associations (intermediatePort) pour lier Cruise a Port afin de faciliter le sens de lecture.</li>
+        <li>Nous avons décidé d'utiliser des classes au lieu d'une énuération pour Sections afin que la classe soit plus flexible.</li>
+
     </ul>
-    <h2>
-        Tâche 2</h2>
+    <h2>Diagramme de classe</h2>
     <p>
-        ...
+        Voici quelques hypothèses et notre raisonnement derrière notre diagramme de classe :
     </p>
+    <ul>
+        <li>Nous avons décidé d'omettre les getters et les setters afin de garder notre diagrame clair.</li>
+        <li>Nous avons décidé d'omettre les classes Service et Database afin de garder notre diagramme simple.</li>
+        <li>Nous avons décidé de garde notre Controller simple. Ideallement, il serait separe en deux.</li>
+        <li>Nous avons décidé de separer View en Client et Admin puisque c'est plus simple que gerer des permissions.</li>
+    </ul>
+    <h2>Contraintes OCL</h2>
+    <p>
+        Voici quelques hypothèses et notre raisonnement derrière nos contraites OCL :
+    </p>
+    <ul>
+        <li>Il y a certaines contraintes qui sont répétées car nous n'avons pas implémenté la généralisation de certaines classes dans le modèle du domaine.</li>
+    </ul>
 
 
 <div id="shimeji-workArea" style="position: fixed; background: transparent; z-index: 2147483643; width: 100vw; height: 100vh; left: 0px; top: 0px; transform: translate(0px, 0px); pointer-events: none;"></div></body></html>
