statechart push pt2

--- a/Devoir 2/rapport.html
+++ b/Devoir 2/rapport.html
@@ -284,24 +284,18 @@
     </tbody>
   </table>
   <h2>Réseau de Pétri</h2>
+  <!-- !!!!!!!! IMAGE !!!!! -->
+  <!-- <img src="images/petri.png" alt="Réseau de Pétri"> -->
   <p>
-    !!!!!!!! IMAGE !!!!!
     Voici quelques hypothèses et notre raisonnement derrière notre réseau de Pétri :
   </p>
   <ul>
-    <li>Nous avons décidé de généraliser quelques classes comme Company, Itinerary et TransportHub afin de faciliter la
-      réutilisabilité.</li>
-    <li>Nous avons décidé de ne pas généraliser les classes Econ et First car nous avons jugé qu'il y a trop de
-      différences entre PlaneSection et TrainSection.</li>
-    <li>Nous avons décidé d'utiliser une classe d'association pour lier Reservation a Clien afin de ne pas avoir de
-      cycle dans notre diagramme.</li>
-    <li>Nous avons décidé de mettre deux associations pour lier Flight a Aiport et trois associations (intermediatePort)
-      pour lier Cruise a Port afin de faciliter le sens de lecture.</li>
-    <li>Nous avons décidé d'utiliser des classes au lieu d'une énuération pour Sections afin que la classe soit plus
-      flexible.</li>
+    <li></li>
+    <li></li>
+    <li></li>
   </ul>
   <h2>Statechart</h2>
-  <img src="img/statechart.png" alt="Statechart">
+  <img src="images/statechart.png" alt="Statechart">
   <p>
       Voici quelques hypothèses et notre raisonnement derrière notre statechart :
   </p>
