added fields to complete

--- a/Devoir 2/rapport.html
+++ b/Devoir 2/rapport.html
@@ -338,7 +338,24 @@
     <li>Il y a certaines contraintes qui sont répétées car nous n'avons pas implémenté la généralisation de certaines
       classes dans le modèle du domaine.</li>
   </ul>
-
+  <h2>Modules réutilisables</h2>
+  <ul>
+    <li>class1</li>
+    <li>class2</li>
+    <li>class3</li>
+  </ul>
+  <h2>Discussions ...</h2>
+  <h2>Couplage et cohésion</h2>
+  <h2>Fardeau des classes</h2>
+  <h2>Graphe IA</h2>
+  <!-- <img src="images/ia.png" alt="Graphe IA"> -->
+  <p>
+    Justification : 
+  </p>
+  <p>
+    write here (equitabilite et absence de blocage) 
+  </p>
+  <h2>Application des principes de conception</h2>
 
   <div id="shimeji-workArea"
     style="position: fixed; background: transparent; z-index: 2147483643; width: 100vw; height: 100vh; left: 0px; top: 0px; transform: translate(0px, 0px); pointer-events: none;">
