graphe de couverture

--- a/Devoir 2/rapport.html
+++ b/Devoir 2/rapport.html
@@ -291,7 +291,10 @@
         <li>Nous avons décidé également de mettre un jeton dans la place de 'Lumière' afin de forcer le fait qu'une seule voiture peut rentrer en tout temps. Ainsi, afin de pouvoir franchir la transition 'Entrée vers R-S', il faut qu'il y ait un jeton de disponible dans la place 'Lumière'.</li>
         <li>Afin de déterminer s'il y avait présence de famine dans notre réseau, nous avons testé notre réseau a l'aide de PIPE. Nous avons fais rouler 500 fois et 1000 fois notre réseau et il n'y avait pas eu de deadlock aux 2 essais.</li>
         <li>Lois de conservations </li>
-        <li>Graphe de couverture </li>
+        <li>Graphe de couverture
+            <br>       
+            <img src="images/graphe de couverture.png" alt="Graphe de couverture" width="700" height="500"/>
+        </li>
     </ul>
 
     <u><h2>Statechart</h2></u>
@@ -318,7 +321,7 @@
         <li>Nous avons décidé de separer View en Client et Admin puisque c'est plus simple que gerer des permissions.</li>
       </ul>
       <a href="vpp/ClassDiagram.vpp">Lien vers le diagramme de classe</a>
-      <img src="images/ClassDiagram.jpg" alt="Diagramme de classe" />
+      <img src="images/ClassDiagram.jpg" alt="Diagramme de classe" width="900" height="800"/>
     
     <!--Diagramme de sequence-->
     <h3>Diagrammes de séquence</h3>
@@ -334,7 +337,7 @@
     <!--Diagramme de paquets-->
     <h3>Diagramme de paquets</h3>
     <a href="vpp/PackageDiagrram.vpp">Lien vers le diagramme de paquets</a>
-    <img src="images/PackageDiagram.jpg" alt="Diagramme de paquets" />
+    <img src="images/PackageDiagram.jpg" alt="Diagramme de paquets" width="900" height="800"/>
     
     <!--Contraintes OCL-->
     <h3>Voici quelques hypothèses et notre raisonnement derrière nos contraintes OCL :</h3>
