--- a/Devoir 2/rapport.html
+++ b/Devoir 2/rapport.html
@@ -291,9 +291,9 @@
         <li>Nous avons décidé également de mettre un jeton dans la place de 'Lumière' afin de forcer le fait qu'une seule voiture peut rentrer en tout temps. Ainsi, afin de pouvoir franchir la transition 'Entrée vers R-S', il faut qu'il y ait un jeton de disponible dans la place 'Lumière'.</li>
         <li>Afin de déterminer s'il y avait présence de famine dans notre réseau, nous avons testé notre réseau a l'aide de PIPE. Nous avons fais rouler 500 fois et 1000 fois notre réseau et il n'y avait pas eu de deadlock aux 2 essais.</li>
         <li>Lois de conservations </li>
-        <li>Graphe de couverture
+        <li>Graphe de couverture : dans les deux cas (MTL a R-S et R-S a MTL), le système revient a un état similaire au départ, permettant un cycle infini de passage dans les deux directions.
             <br>       
-            <img src="images/graphe de couverture.png" alt="Graphe de couverture" width="700" height="500"/>
+            <img src="images/graphe de couverture.png" alt="Graphe de couverture" width="700" height="700"/>
         </li>
     </ul>
 
