--- a/rapport.html
+++ b/rapport.html
@@ -315,6 +315,7 @@
                 </ul>
             <li>Il permet de découpler l’émetteur d’une commande (AdminController) de son exécution réelle (implémentée dans les classes Command), en suivant le principe de responsabilité unique.</li>
             <li>Il est aussi très utile pour implémenter des fonctionnalités d'annulation ou d'historique, comme c'est le cas ici avec Invoker.undo().</li>
+            <li>Nous avons choisie de representer uniquement l'option Create (Edit et Delete on ete omis) afin de simplifier le diagramme de sequence.</li>
         </ul>
 
     <u><h2>Visiteur</h2></u>
@@ -363,6 +364,7 @@
         <ul>
             <li>Plusieurs classes (notamment Client et Administrator) violaient initialement le principe de responsabilité unique (SRP). Le nouveau design introduit une séparation claire des responsabilités, grâce à une meilleure application du modèle MVC et à l’intégration du patron Observer. Chaque classe remplit désormais un rôle précis : les vues sont responsables de l’interaction avec l’utilisateur, les contrôleurs centralisent la logique métier, et les modèles (comme Repository) gèrent les données.</li>
             <li>Les modifications apportées permettent également de mieux découpler les composants, en particulier grâce à l’Observer, qui assure une synchronisation automatique entre les données et les interfaces graphiques sans dépendance directe. Toutes les actions possibles — qu’elles soient initiées par l’utilisateur ou déclenchées par des événements — passent désormais par les contrôleurs, ce qui améliore la cohérence, la maintenabilité et la testabilité de l’application.</li>
+            <li>L'utilisation du patron d'Observateur en plus de l'utilisation du Singleton Repository  garantit un point de référence des données centralisé et cohérent entre les différentes vues, créant une meilleur cohésion ainsi qu'un couplage faible en comparaison avec le devoir 2 ou plusieurs entités différentes accedait ou modifiait les données. Cette nouvelle version permet aux utilisateurs de s'abonner au repository et d'être automatiquement notifié lors de changements. </li>
         </ul>             
             
     <div id="shimeji-workArea"
