FINITO PEPITO TBNK

--- a/Devoir 3/rapport.html
+++ b/Devoir 3/rapport.html
@@ -227,11 +227,11 @@
       </table>
       <u><h2>Fabrique</h2></u>
       <p>
-          <a href="Devoir 3/Design/Factory.vpp" alt="factoryVPP">Diagramme de classe : fabrique</a> <br>
-          <img src="Devoir 3/images/Factory.jpg" alt="factoryVPPimg">
+          <a href="Design/Factory.vpp" alt="factoryVPP">Diagramme de classe : fabrique</a> <br>
+          <img src="images/Factory.jpg" alt="factoryVPPimg">
           <br>
-          <a href="Devoir 3/Design/FactorySequence.vpp" alt="factorySequenceVPP">Diagramme de sequence : fabrique</a> <br>
-          <img src="Devoir 3/images/FactorySequence.jpg" alt="factorySequenceVPPimg">
+          <a href="Design/FactorySequence.vpp" alt="factorySequenceVPP">Diagramme de sequence : fabrique</a> <br>
+          <img src="images/FactorySequence.jpg" alt="factorySequenceVPPimg">
           <br>
           Voici quelques hypothèses et notre raisonnement :
       </p>
@@ -260,11 +260,11 @@
   
       <u><h2>Etat</h2></u>
       <p>
-        <a href="Devoir 3/Design/State.vpp" alt="stateVPP">Diagramme de classe : etat</a> <br>
-        <img src="Devoir 3/images/State.jpg" alt="stateVPPimg">
+        <a href="Design/State.vpp" alt="stateVPP">Diagramme de classe : etat</a> <br>
+        <img src="images/State.jpg" alt="stateVPPimg">
         <br>
-        <a href="Devoir 3/Design/StateSequence.vpp" alt="stateSequenceVPP">Diagramme de sequence : etat</a> <br>
-        <img src="Devoir 3/images/StateSequence.jpg" alt="stateSequenceVPPimg">
+        <a href="Design/StateSequence.vpp" alt="stateSequenceVPP">Diagramme de sequence : etat</a> <br>
+        <img src="images/StateSequence.jpg" alt="stateSequenceVPPimg">
         <br>
         Voici quelques hypothèses et notre raisonnement :
     </p>
@@ -281,11 +281,11 @@
 
         <u><h2>Observateur</h2></u>
         <p>
-          <a href="Devoir 3/Design/Observer.vpp" alt="observerVPP">Diagramme de classe : observateur</a> <br>
-          <img src="Devoir 3/images/Observer.jpg" alt="observerVPPimg">
+          <a href="Design/Observer.vpp" alt="observerVPP">Diagramme de classe : observateur</a> <br>
+          <img src="images/Observer.jpg" alt="observerVPPimg">
           <br>
-          <a href="Devoir 3/Design/ObserverSequence.vpp" alt="observerSequenceVPP">Diagramme de sequence : observateur</a> <br>
-          <img src="Devoir 3/images/ObserverSequence.jpg" alt="observerSequenceVPPimg">
+          <a href="Design/ObserverSequence.vpp" alt="observerSequenceVPP">Diagramme de sequence : observateur</a> <br>
+          <img src="images/ObserverSequence.jpg" alt="observerSequenceVPPimg">
           <br>
           Voici quelques hypothèses et notre raisonnement :
       </p>
@@ -305,11 +305,11 @@
     
     <u><h2>Commande</h2></u>
     <p>
-        <a href="Devoir 3/Design/Command.vpp" alt="commandVPP">Diagramme de classe : commande</a> <br>
-        <img src="Devoir 3/images/Command.jpg" alt="commandVPPimg">
+        <a href="Design/Command.vpp" alt="commandVPP">Diagramme de classe : commande</a> <br>
+        <img src="images/Command.jpg" alt="commandVPPimg">
         <br>
-        <a href="Devoir 3/Design/CommandSequence.vpp" alt="commandSequenceVPP">Diagramme de sequence : commande</a> <br>
-        <img src="Devoir 3/images/CommandSequence.jpg" alt="commandSequenceVPPimg">
+        <a href="Design/CommandSequence.vpp" alt="commandSequenceVPP">Diagramme de sequence : commande</a> <br>
+        <img src="images/CommandSequence.jpg" alt="commandSequenceVPPimg">
         <br>
         Voici quelques hypothèses et notre raisonnement :
     </p>
@@ -328,11 +328,11 @@
 
     <u><h2>Visiteur</h2></u>
     <p>
-        <a href="Devoir 3/Design/Visitor.vpp" alt="visitorVPP">Diagramme de classe : visiteur</a> <br>
-        <img src="Devoir 3/images/Visitor.jpg" alt="visitVPPimg">
+        <a href="Design/Visitor.vpp" alt="visitorVPP">Diagramme de classe : visiteur</a> <br>
+        <img src="images/Visitor.jpg" alt="visitVPPimg">
         <br>
-        <a href="Devoir 3/Design/VisitorSequence.vpp" alt="visitorSequenceVPP">Diagramme de sequence : visiteur</a> <br>
-        <img src="Devoir 3/images/VisitorSequence.jpg" alt="visitorSequenceVPPimg">
+        <a href="Design/VisitorSequence.vpp" alt="visitorSequenceVPP">Diagramme de sequence : visiteur</a> <br>
+        <img src="images/VisitorSequence.jpg" alt="visitorSequenceVPPimg">
         <br>
         Voici quelques hypothèses et notre raisonnement :
     </p>
@@ -346,8 +346,8 @@
 
     <u><h2>Strategie</h2></u>
     <p>
-        <a href="Devoir 3/Design/Strategy.vpp" alt="startegyVPP">Diagramme de classe : strategie</a> <br>
-        <img src="Devoir 3/images/Strategy.jpg" alt="strategyVPPimg">
+        <a href="Design/Strategy.vpp" alt="startegyVPP">Diagramme de classe : strategie</a> <br>
+        <img src="images/Strategy.jpg" alt="strategyVPPimg">
         <br>
         Voici quelques hypothèses et notre raisonnement :
     </p>    
@@ -359,8 +359,8 @@
 
     <u><h2>Memento</h2></u>
     <p>
-        <a href="Devoir 3/Design/Memento.vpp" alt="mementoVPP">Diagramme de classe : memento</a> <br>
-        <img src="Devoir 3/images/Memento.jpg" alt="mementoVPPimg">
+        <a href="Design/Memento.vpp" alt="mementoVPP">Diagramme de classe : memento</a> <br>
+        <img src="images/Memento.jpg" alt="mementoVPPimg">
         <br>
         Voici quelques hypothèses et notre raisonnement :
     </p>    
