--- a/Devoir 3/rapport.html
+++ b/Devoir 3/rapport.html
@@ -382,6 +382,13 @@
     <div id="shimeji-workArea"
       style="position: fixed; background: transparent; z-index: 2147483643; width: 100vw; height: 100vh; left: 0px; top: 0px; transform: translate(0px, 0px); pointer-events: none;">
     </div>
+
+    <p>
+      <a href="Design/Class.vpp" alt="classVPP">Diagramme de paquets</a> <br>
+      <img src="images/Class.jpg" alt="classVPPimg">
+      <br>
+  </p>
+
     </body>
   
 </html>
